--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <h4 class="card-heading">SAA</h4>
             </div>
             <div>
-              <a href="https://docs.google.com/forms/d/1DZI7cOi0o2iI7XKuc6zD6p5a_IRUpFbQWDsiUiQRXXM/edit?usp=sharing" target="_blank" class="card-link w-inline-block">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSem9sewafiMkAR104nBgTejnZX3Drzg1aqd3fStnRapw6eTzQ/viewform?usp=sf_link" target="_blank" class="card-link w-inline-block">
                 <div class="card-link-text">Apply</div>
               </a>
               <a href="https://drive.google.com/file/d/180cFySOI8dGord3nWIMzAXYeo3y4dxIJ/view?usp=sharing" target="_blank" class="card-link w-inline-block">
